--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,22 +1,20 @@
-# Dockerfile
+# backend/Dockerfile
 
-# Use the full Python image for better system library compatibility
 FROM python:3.11
 
-# Set the working directory inside the container
 WORKDIR /app
 
-# Copy the requirements file into the container
 COPY requirements.txt .
 
-# Install the Python dependencies
+# Layer 1: Install Python packages from requirements
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy your application code into the container
+# Layer 2: Download the spaCy NLP model
+RUN python -m spacy validate || true
+RUN pip install https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
+
 COPY . .
 
-# Expose port 8000 so we can access the app from outside the container
 EXPOSE 8000
 
-# Define the command to run your app when the container starts
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
