--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,14 @@
 # requirements.txt
-fastapi
-uvicorn
-motor
-python-dotenv
-pymongo[srv]
-pandas
-scikit-learn
-certifi
-dnspython
-requests
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+motor==3.3.2
+python-dotenv==1.0.0
+pymongo[srv]==4.6.0
+pandas==2.1.4
+scikit-learn==1.3.2
+certifi==2023.11.17
+dnspython==2.4.2
+requests==2.31.0
+httpx==0.25.2
+spacy==3.7.3
+pydantic[email]
